test/error/iface/err2.rzy
component
  Sub
    input
      inp();
    output
      out();
      
  implementation composition
    connection
      inp -> out;
      
  end

  Err2
    input
      inp();
    output
      out();

  implementation composition
    
    component
      a : Sub;
      
    connection
      inp -> a.inp;   // prevent error throwing
      a.out -> out;   // prevent error throwing
      
      a.inp -> out;   // ERROR connect sub-input to output

  end

